* Fixed non responsive layout on mobile devices.

--- a/less/slider.less
+++ b/less/slider.less
@@ -137,6 +137,7 @@
 	position: relative;
 	background: #1c1c1c;
 	overflow: hidden;
+	width: 100%;
 
 	.flexslider {
 		margin-bottom: 0;
@@ -155,6 +156,7 @@
 				.clearfix();
 
 				width: @container_width;
+				.box-sizing(border-box);
 				margin: 0 auto;
 
 				.text-content {
